[gd_scene load_steps=25 format=3 uid="uid://dpbcprk36qxtr"]

[ext_resource type="Script" uid="uid://c8q0jkgnrmey5" path="res://scripts/player/player.gd" id="1_8afob"]
[ext_resource type="Texture2D" uid="uid://cgghuvdjwqoea" path="res://assets/art/player/Down.png" id="2_75vfm"]
[ext_resource type="PackedScene" uid="uid://c7jshr4urjdpu" path="res://scenes/components/hurtbox_component.tscn" id="2_dovo2"]
[ext_resource type="PackedScene" uid="uid://cxswit11xvp2l" path="res://scenes/components/health_component.tscn" id="2_gmlin"]
[ext_resource type="Shader" uid="uid://d3ui741dnaup8" path="res://assets/shaders/flash_color.gdshader" id="2_gx1jg"]
[ext_resource type="PackedScene" uid="uid://c23x1u2pibfqo" path="res://scenes/components/velocity_component.tscn" id="2_lvxji"]
[ext_resource type="Texture2D" uid="uid://7brybfh6gtx4" path="res://assets/art/player/Down2.png" id="3_je7p5"]
[ext_resource type="Texture2D" uid="uid://c2pfub2ecotme" path="res://assets/art/player/Side.png" id="4_fm80t"]
[ext_resource type="Texture2D" uid="uid://gtya6ecujdxt" path="res://assets/art/player/Side2.png" id="5_gx1jg"]
[ext_resource type="PackedScene" uid="uid://cojkx00qwthdn" path="res://scenes/essence/essence_ui.tscn" id="5_p47bc"]
[ext_resource type="Texture2D" uid="uid://d4nu7lkyoujhh" path="res://assets/art/player/Up.png" id="6_ugbui"]
[ext_resource type="Texture2D" uid="uid://c5dhdjroy1mky" path="res://assets/art/player/Up2.png" id="7_fcs02"]
[ext_resource type="FontFile" uid="uid://dsgd2l7v3xakg" path="res://assets/fonts/Beautiful Valentine.otf" id="12_fm80t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ugbui"]
resource_local_to_scene = true
shader = ExtResource("2_gx1jg")
shader_parameter/flash_color = Color(1, 0.988235, 1, 1)
shader_parameter/flash_mult = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_myrg7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_75vfm")
}, {
"duration": 1.0,
"texture": ExtResource("3_je7p5")
}],
"loop": true,
"name": &"down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_75vfm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_fm80t")
}, {
"duration": 1.0,
"texture": ExtResource("5_gx1jg")
}],
"loop": true,
"name": &"side",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ugbui")
}, {
"duration": 1.0,
"texture": ExtResource("7_fcs02")
}],
"loop": true,
"name": &"up",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_75vfm"]
radius = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0owmy"]
radius = 7.0
height = 26.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gx1jg"]
bg_color = Color(0.167969, 0.167969, 0.167969, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugbui"]
bg_color = Color(0.765625, 0.104675, 0.104675, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fcs02"]
font = ExtResource("12_fm80t")
font_size = 8

[sub_resource type="Animation" id="Animation_myrg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/flash_mult")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.125, 0.125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material:shader_parameter/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.988235, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fcs02"]
resource_name = "flash"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/flash_mult")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.125, 0.125), Vector2(0.15, 0.15), Vector2(0.125, 0.125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material:shader_parameter/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.988235, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gx1jg"]
resource_name = "rammy"
length = 3.0
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.994629, 1, 0.828125, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/flash_mult")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.25, 1.5, 1.75, 2, 2.125, 2.25, 2.375, 2.5, 2.625, 2.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kvlxm"]
_data = {
&"RESET": SubResource("Animation_myrg7"),
&"flash": SubResource("Animation_fcs02"),
&"rammy": SubResource("Animation_gx1jg")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
motion_mode = 1
wall_min_slide_angle = 0.523599
script = ExtResource("1_8afob")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
material = SubResource("ShaderMaterial_ugbui")
position = Vector2(0, -16)
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_myrg7")
animation = &"side"
centered = false
offset = Vector2(-128, -128)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_75vfm")

[node name="velocityComponent" parent="." instance=ExtResource("2_lvxji")]
unique_name_in_owner = true
max_speed = 125.0
acceleration = 8.0

[node name="HealthComponent" parent="." instance=ExtResource("2_gmlin")]
unique_name_in_owner = true
max_health = 75.0

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component", "collision_shape") instance=ExtResource("2_dovo2")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
health_component = NodePath("../HealthComponent")
collision_shape = NodePath("CollisionShape")

[node name="CollisionShape" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_0owmy")
debug_color = Color(0.976471, 0, 0.407843, 0.160784)

[node name="EssenceUI" parent="." instance=ExtResource("5_p47bc")]
unique_name_in_owner = true
position = Vector2(6, -8)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="UI/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_gx1jg")
theme_override_styles/fill = SubResource("StyleBoxFlat_ugbui")
value = 83.21
show_percentage = false

[node name="HealthLabel" type="Label" parent="UI/MarginContainer/HBoxContainer/HealthBar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 50.0
offset_bottom = 10.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0/100"
label_settings = SubResource("LabelSettings_fcs02")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShaderPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_kvlxm")
}

[node name="GhostTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.04

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
